force-app/main/default/objects/Food_Preference__c/fields/Food_Preference__c.field-meta.xml
<CustomField>
    <fullName>Food_Preference__c</fullName>
    <label>Food Preference</label>
    <type>Text</type>
    <length>255</length>
</CustomField>