force-app/main/default/objects/Food_Preference__c/fields/Guest__c.field-meta.xml
<CustomField>
    <fullName>Guest__c</fullName>
    <label>Guest</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Food_Preferences</relationshipName>
    <relationshipLabel>Food Preferences</relationshipLabel>
</CustomField>