force-app/main/default/objects/Food_Preference__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <label>Session</label>
    <type>Lookup</type>
    <referenceTo>Session__c</referenceTo>
    <relationshipName>Food_Preferences</relationshipName>
    <relationshipLabel>Food Preferences</relationshipLabel>
</CustomField>